<resources>
    <string name="app_name">KotlinApp</string>
    <string name="intent">Intent</string>
    <string name="call">llamar</string>
    <string name="email">Send Email</string>
    <string name="share">Compartir</string>
    <string name="web">Ir ala Web</string>
    <string name="sms">Enviar sms</string>
    <string name="camera">Camara</string>
    <string name="dialog">Dialogos</string>
    <string name="toas">Toasts</string>
    <string name="snackbar">SnackBars</string>
    <string name="alert">Alerts</string>
    <string name="selector">Selectors</string>
    <string name="progresDialog">Progress dialogs</string>
    <string name="taskasync">Tareas Async</string>
    <string name="hint">¿A donde quieres ir?</string>
    <string name="internet">Verificar Conexion</string>
    <string name="places">Lugares</string>
    <string name="weather">Datos del tiempo</string>
    <string name="calculadora">Calculator</string>
    <string name="gato">juego Gato</string>
</resources>
